<resources>
    <string name="app_name">VKCLoyaltyDubaiKotlin</string>
    <string name="action_settings">Settings</string>
    <string name="no_internet">Check your internet connection</string>
    <string name="common_error">Cannot continue. Please try again later.</string>
    <string name="invalid_user">Invalid user type</string>
    <string name="point_history">Coupon History</string>
    <string name="inbox">Inbox</string>
    <string name="gifts">Gifts</string>
    <string name="dealers">Select Dealers</string>
    <string name="profile">My Profile</string>
    <string name="issue_point">Issue Coupon</string>
    <string name="shop_image">Upload Shop Image</string>
    <string name="select_item">Select</string>
    <string name="take_picture">Take Picture</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="notification_channel_id">default</string>
    <string name="title_activity_dealers">DealersActivity</string>
    <string name="otp_sent">OTP has been sent to XXXXXXXXX%1$s</string>
    <string name="total_coupons">%1$s Coupons</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="achieved_percentage">Achieved Percentage</string>
    <string name="coupon_target">Coupon Target</string>
    <string name="points">Points</string>
    <string name="no_coupons_collected_visit_again_for_updates">No Coupons Collected, Visit again for updates</string>
    <string name="issue_coupons">Issue Coupons</string>
    <string name="coupons">Coupons</string>
    <string name="please_update_app_to_continue_using">Please update app to continue using...</string>
    <string name="search_by_name">Search by name</string>
    <string name="submit">Submit</string>
    <string name="cust_id">CUST_ID</string>
    <string name="assign_dealers">Assign Dealers</string>
    <string name="mobile">Mobile</string>
    <string name="update">Update</string>
    <string name="owner_name">Owner Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="place">Place</string>
    <string name="pin">Pin</string>
    <string name="alternate_mobile">Alternate Mobile</string>
    <string name="email">Email</string>
    <string name="i_agree">I Agree</string>
    <string name="message_title">Message Title</string>
</resources>